<resources>
    <string name="app_name">BzGrey</string>
    <string name="patient_info">Patient Info</string>
    <string name="entertainment">Entertainment</string>
    <string name="call">Call</string>
    <string name="calendar">Calendar</string>
    <string name="greetings">Good morning, what would you like to do?</string>
    <string name="home">Home</string>
    <string name="jake_care">Jake\'s Care</string>
    <string name="temp">36.8</string>
    <string name="temp2">Temp</string>
    <string name="hr">75</string>
    <string name="hr2">HR</string>
    <string name="bp">146/73</string>
    <string name="bp2">BP</string>
    <string name="age">AGE</string>
    <string name="full_name">FULL NAME</string>
    <string name="weight">WEIGHT</string>
    <string name="height">HEIGHT</string>
    <string name="jake_matthew_anderson">Jake Matthew Anderson</string>
    <string name="drug_allergy">DRUG ALLERGY</string>
    <string name="empty">-</string>
    <string name="age_input">75 years old</string>
    <string name="height_input">174cm</string>
    <string name="weight_input">78kg</string>
    <string name="title_activity_calender_page">CalenderPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="prep_for_surgery"> Prep for surgery </string>
    <string name="surgery_starts"> Surgery starts </string>
    <string name="_8_00" > 8:00 </string>
    <string name="_14_00" > 14:00 </string>
    <string name="_18_00" >18:00 </string>
    <string name="music">MUSIC</string>
    <string name="movies">MOVIES</string>
    <string name="news">NEWS</string>
    <string name="take_medicine">Take medicine</string>
    <string name="contact_name1">Evelyn</string>
    <string name="contact_name2">Son</string>
    <string name="contact_name3">Lea</string>
    <string name="contact_name4">Honey</string>
    <string name="play_music">Play</string>
</resources>