<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientInfo">

    <ImageView
        android:id="@+id/temp"
        android:layout_width="164dp"
        android:layout_height="152dp"
        android:src="@drawable/temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hr"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="212dp"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/hr"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/temp_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp2"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/temp_text" />

    <ImageView
        android:id="@+id/hr"
        android:layout_width="136dp"
        android:layout_height="140dp"
        android:layout_marginEnd="180dp"
        android:src="@drawable/hr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/hr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="94dp"
        android:text="@string/hr"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/bp"
        app:layout_constraintStart_toEndOf="@+id/hr"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/hr_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/hr2"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/hr"
        app:layout_constraintTop_toBottomOf="@+id/hr_text" />

    <ImageView
        android:id="@+id/bp"
        android:layout_width="264dp"
        android:layout_height="242dp"
        android:layout_marginEnd="216dp"
        android:src="@drawable/bp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/bp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="52dp"
        android:text="@string/bp"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/hr_text"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/bp_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bp2"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/bp"
        app:layout_constraintTop_toBottomOf="@+id/bp_text" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/jake_care"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home"
        android:layout_width="195dp"
        android:layout_height="91dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/gold"
        android:text="@string/home"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>