<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicActivity">


    <TextView
        android:id="@+id/music_text"
        android:layout_width="226dp"
        android:layout_height="84dp"
        android:layout_marginTop="52dp"
        android:text="MUSIC"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/movies_button"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/movies"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/music_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/news_button"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/news"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/music_text"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home"
        android:layout_width="147dp"
        android:layout_height="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/gold"
        android:elevation="5dp"
        android:text="@string/home"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_list"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:elevation="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_text"
        app:layout_constraintVertical_bias="0.438" />

</androidx.constraintlayout.widget.ConstraintLayout>
