<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EntertainmentPage">

        <TextView
            android:id="@+id/news_text"
            android:layout_width="226dp"
            android:layout_height="84dp"
            android:layout_marginTop="48dp"
            android:text="@string/news"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/music_button"
            android:layout_width="193dp"
            android:layout_height="66dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="60dp"
            android:text="@string/music"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toEndOf="@+id/news_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/movies_button"
            android:layout_width="193dp"
            android:layout_height="66dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="60dp"
            android:text="movies"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/news_text"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/news_container1"
            android:layout_width="1028dp"
            android:layout_height="520dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_text"
            app:layout_constraintVertical_bias="0.052">

            <ImageView
                android:id="@+id/news1"
                android:layout_width="515dp"
                android:layout_height="match_parent"
                android:paddingEnd="20sp"
                android:src="@drawable/news1" />

            <ImageView
                android:id="@+id/news2"
                android:layout_width="509dp"
                android:layout_height="509dp"
                android:paddingStart="20sp"
                android:src="@drawable/news2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_container2"
            android:layout_width="1028dp"
            android:layout_height="557dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_container1">

            <ImageView
                android:id="@+id/news3"
                android:layout_width="497dp"
                android:layout_height="544dp"
                android:paddingEnd="20sp"
                android:src="@drawable/news3" />

            <ImageView
                android:id="@+id/news4"
                android:layout_width="527dp"
                android:layout_height="544dp"
                android:paddingStart="20sp"
                android:src="@drawable/news4" />
        </LinearLayout>

        <Button
            android:id="@+id/home"
            android:layout_width="147dp"
            android:layout_height="74dp"
            android:backgroundTint="@color/gold"
            android:elevation="5dp"
            android:text="@string/home"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>